@@ -70843,98 +70843,7 @@ public class WebConfiguration extends WebMvcConfigurerAdapter {
         return txManager;
     }
 }
-pom.xml
-XML
-1
-2
-3
-4
-5
-6
-7
-8
-9
-10
-11
-12
-13
-14
-15
-16
-17
-18
-19
-20
-21
-22
-23
-24
-25
-26
-27
-28
-29
-30
-31
-32
-33
-34
-35
-36
-37
-38
-39
-40
-41
-42
-43
-44
-45
-46
-47
-48
-49
-50
-51
-52
-53
-54
-55
-56
-57
-58
-59
-60
-61
-62
-63
-64
-65
-66
-67
-68
-69
-70
-71
-72
-73
-74
-75
-76
-77
-78
-79
-80
-81
-82
-83
-84
-85
-86
-87
-88
-89
-90
+
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -71110,6 +71019,24 @@ public class HomeController {
 
 Помогите пожалуйста, сильно не критикуйте, мой первый web проект и я много чего не знаю(
 Ответ: Это мой первый пр
+--------------------------------------------------------------------------------------------------------
+FROM java:8-jdk-alpine
+VOLUME /tmp
+ARG DEPENDENCY=./target/modules
+COPY ${DEPENDENCY}/diffy-1.1.0.jar /usr/app/boor.jar
+WORKDIR /usr/app
+RUN sh -c 'touch demo-docker-0.0.1-SNAPSHOT.jar'
+ENTRYPOINT [
+"java",
+"-Djava.security.egd=file:/dev/./urandom",
+"-XX:MaxPermSize=256m",
+"-XX:NativeMemoryTracking=summary",
+"-XX:+UseConcMarkSweepGC",
+"-Xmx2g",
+"-Xms32m",
+"-jar",
+"boot.jar"
+]
 --------------------------------------------------------------------------------------------------------
 Example 24. Example performance option configuration
 hibernate.search.Animals.2.indexwriter.max_merge_docs = 10
